@@ -30,7 +30,7 @@ Input for each ray is:
 If the direction vector is (0,0,0), a bogus record
 is printed and the output is flushed if the
 .I -x
-value is unset or zero.
+value is one or zero.
 (See the notes on this option below.)\0
 This may be useful for programs that run
 .I rtrace
