@@ -363,7 +363,7 @@ void
 end_record()
 {
 	--waitflush;
-	lu_doall(&ofiletab, puteol, NULL);
+	lu_doall(&ofiletab, &puteol, NULL);
 	if (using_stdout & (outfmt == 'a'))
 		putc('\n', stdout);
 	if (!waitflush) {
@@ -513,7 +513,7 @@ reload_output()
 			*(STREAMOUT *)oent->data = sout;
 		}
 	}
-	lu_doall(&ofiletab, myclose, NULL);	/* close all files */
+	lu_doall(&ofiletab, &myclose, NULL);	/* close all files */
 }
 
 
@@ -669,7 +669,7 @@ recover_output()
 	}
 						/* seek on all files */
 	nvals = lastout * outvsiz;
-	lu_doall(&ofiletab, myseeko, &nvals);
+	lu_doall(&ofiletab, &myseeko, &nvals);
 						/* skip repeated input */
 	lastout *= accumulate;
 	for (nvals = 0; nvals < lastout; nvals++) {
